--- a/cloudmart-frontend.yaml
+++ b/cloudmart-frontend.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: cloudmart-pod-execution-role
       containers:
       - name: cloudmart-frontend-app
-        image: public.ecr.aws/b5h7a6y0/cloudmart-frontend 
+        image: CONTAINER_IMAGE 
 ---
 
 apiVersion: v1
