--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=http://:5000/api
+VITE_API_BASE_URL=http://ab81a87599e004b37a4b751acce50f0f-1167671352.us-east-1.elb.amazonaws.com:5000/api
